<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel"
            type="dx.queen.myreel.viewModel.RegistrationViewModel"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_profile_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:background="@drawable/rounded_corners_bt_image"
        android:text="@string/select_photo"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selected_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_profile_photo"
        app:layout_constraintEnd_toEndOf="@+id/bt_profile_photo"
        app:layout_constraintStart_toStartOf="@+id/bt_profile_photo"
        app:layout_constraintTop_toTopOf="@+id/bt_profile_photo" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners_text"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text="@={viewModel.username}"
        android:textSize="18sp"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_profile_photo" />


    <EditText
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text="@={viewModel.email}"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@={viewModel.password }"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />
    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners_text"
        android:hint="@string/dateOfBirth"
        android:textSize="18sp"
        android:onClick="@{() -> viewModel.pickADate()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password" />

    <Button
        android:id="@+id/register_bt"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@android:dimen/notification_large_icon_width"
        android:background="@drawable/rounded_corners_button"
        android:onClick="@{() -> viewModel.onClick()}"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@android:dimen/notification_large_icon_height"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="italic"
        android:onClick="@{() -> viewModel.haveAnAccount()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_bt" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>