<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email_sign_in"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners_text"
        android:ems="10"
        android:hint="@string/email"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_sign_in"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners_text"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="18sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_in" />

    <Button
        android:id="@+id/bt_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@android:dimen/notification_large_icon_height"
        android:background="@drawable/rounded_corners_button"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_in" />

    <TextView
        android:id="@+id/have_no_registr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@android:dimen/notification_large_icon_height"
        android:text="@string/have_no_account"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_sign_in_button" />
</androidx.constraintlayout.widget.ConstraintLayout>